--- a/app/src/main/res/layout/post_view_layout.xml
+++ b/app/src/main/res/layout/post_view_layout.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_gravity="center"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    app:cardCornerRadius="10dp"
+    app:contentPadding="5dp"
+    app:cardElevation="5dp"
     android:orientation="vertical">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp">
-
-        <LinearLayout
-            android:layout_margin="8dp"
+    <LinearLayout
+        android:layout_margin="3dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/post_image_view"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/post_image_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#FFFFFF"
-                app:srcCompat="@drawable/ic_launcher_background" />
+            android:background="#FFFFFF"
+            app:srcCompat="@drawable/ic_launcher_background" />
 
-            <TextView
-                android:layout_marginTop="15dp"
-                android:id="@+id/post_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="24dp"
-                android:text="Ebubekir"/>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <TextView
+            android:layout_marginTop="15dp"
+            android:id="@+id/post_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="14dp"/>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
