--- a/app/src/main/res/layout/post_view_layout.xml
+++ b/app/src/main/res/layout/post_view_layout.xml
@@ -21,8 +21,9 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/post_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+
             android:layout_gravity="center"
             android:background="#FFFFFF"
             app:srcCompat="@drawable/ic_launcher_background" />
